first update able to generate market update data

--- a/README
+++ b/README
@@ -45,4 +45,4 @@ You are welcome to send any patches.
 
 License: BSD
 
-Author: TerryH, email: terryh.tp@gmail.com,
+Author: TerryH, email: terryh.tp at gmail.com,
