--- a/README.TW
+++ b/README.TW
@@ -49,14 +49,14 @@ autotrader.py --pov=200 --tax=1000 --start=2009-09-01 -m TFX.csv strategy.py
     這會回測您的策略程式由時間 2009-09-01  開始，到最後，也可以指定 --end=，格式同--start= 一樣，
     也可以同時使用
 
-    pov 指的是，每點得金額(台指是200元)，tax 指的是，每一筆交易所需的稅金，必須同時都有指定，回測才
+    pov 指的是，每點的金額(台指是200元)，tax 指的是，每一筆交易所需的稅金，必須同時都有指定，回測才
     會計算金額，不然都只是算點數
 
 要即時監控市場，執行策略
 
 autotrader.py -m TFX.csv -q R:\quote.txt strategy.py
 
-    TFX.csv 是您要參考的歷史資料，預設回溯300根，及時監控的 TFX.csv 記得要太大，一般留您需要
+    TFX.csv 是您要參考的歷史資料，預設回溯300根，及時監控的 TFX.csv 記得不要太大，一般留您需要
     回溯的資料亮就可以了可以加快速度，格式您可以參考TFX.csv(台指期的範例資料)
     
     您可以用 --help 來看到更多的參數，預設是1秒查詢市場一次，quote.txt 則是報價文字介面檔，
@@ -69,8 +69,9 @@ autotrader.py -m TFX.csv -q R:\quote.txt strategy.py
 ddeclient.py --config=mydde.py R:\quote.txt
 
     mydde.py 是我 DDE 報價源的設定，R:\quote.txt 則是我輸出到 memory disk 的報價檔，要給 AutoTrader 
-    用的，    目前 ddeclient.py  可以支援同商品，多個報價源，這是我的 mydde.py 
-    (名字可以自己取，我用日盛的DDE當範例) 的內容，#字號後面的，都是註解
+    用的，    目前 ddeclient.py  如果，要支援同商品，多個報價源，請利用 Excel 在做中介，mydde.py  
+    (名字可以自己取，日盛的DDE當範例) 的內容，#字號後面的，都是註解，DDESERVERS 只有第一個報價源
+    有效
 
 #!/usr/bin/env python
 # -*- coding: utf-8 -*-
@@ -82,22 +83,46 @@ DDESERVERS = [
     'price': u'市價',
     'total': u'累計交易量',
     'time': u'時間',
+    }
+]
+
+康和的範例
+
+#!/usr/bin/env python
+# -*- coding: utf-8 -*-
+
+DDESERVERS = [
+    {
+    'server': u'MMSDDE',
+    'topic': u'FUSA',
+    'price': u'WTX&.125',
+    'total': u'WTX&.404',
+    'time':  u'WTX&.143',
     },
-#    {
-#    'server': u'',
-#    'topic': u'',
-#    'price': u'',
-#    'total': u'',
-#    'time': u'',
-#    },
+
+]
+
+Excel 的範例，假設，您的檔名是quote.xls，Excel 裡 ABC是C軸，123是R軸
+
+#!/usr/bin/env python
+# -*- coding: utf-8 -*-
+
+DDESERVERS = [
+    {
+    'server': u'Excel.exe',
+    'topic': u'quote.xls',
+    'price': u'R1C2',
+    'total': u'R1C3',
+    'time': u'R1C1',
+    },
 ]
 
 
 為什麼我要寫這一套程式
 =======================
 
-因為沒有簡單，又 Open Source 的軟體，不然，就是要費用，又不穩定，如果有請告訴我，我會加入，幫忙開發
-
+因為沒有簡單，易用，跨平台，MAC 可以用，Windows XP，VISTA，或是 Windows 7，Linux ，BSD 或是更多的作業系統，
+都可以用，又 Open Source 的軟體，不然，就是要費用，又不穩定
 
 程式修正
 =========
