--- a/README
+++ b/README
@@ -1,7 +1,7 @@
 DECLARATION
 ============
 
-This package is not fullly functional. We are not responsible for any LOSS via using this software.
+We are not responsible for any LOSS via using this software.
 
 WHAT'S IT
 ==========
