--- a/README.TW
+++ b/README.TW
@@ -34,7 +34,8 @@ http://github.com/terryh/autotrader
 
 有任何的想法，或是程式的修正，儘管把 patch 送來，非常的歡迎
 
-
 版權: 個人使用為 MIT Licensei ， 個人以外，請遵循 GPL License ， 謝謝
 
 作者: TerryH, email: terryh.tp at gmail.com,
+
+程式所用的圖片來自 from http://www.softicons.com/free-icons/toolbar-icons/fatcow-hosting-extra-icons-2-by-fatcow/
