--- a/README
+++ b/README
@@ -14,6 +14,10 @@ Keeping every function tiny, easy, and small not easy to break down the trading 
 
 Just for you to test or some other developer interested in this field.
 
+Online document https://autotrader.readthedocs.org/en/latest/
+
+Windows (32bit) installer http://dl.dropbox.com/u/14137697/autotrader/20130317/setup.exe
+
 HOW-TO
 ==========
 
